PDFBOX-1186: Improve xmpbox code strength
* Preserve stack Trace
* System println
* Loose coupling
* avoid print stack trace
* Integer Instanciation
* Constructor calls overridable method 

git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1211604 13f79535-47bb-0310-9956-ffa450edef68